# simple-pytest-tutorial

./: Makefile  README.md  api_dfx.py  api_numx.py  pyproject.toml  test_api_numx.py  test_shopping_cart.py
carshow/: db.sqlite3  manage.py
carshow/carshow/: asgi.py  settings.py  urls.py  wsgi.py
carshow/carx/: admin.py  apps.py  models.py  urls.py  views.py
carshow/carx/migrations/: 0001_initial.py  0002_alter_car_id.py
carshow/myapp/: forms.py  urls.py  views.py
carshow/templates/: add_car.html  base.html  car_show_all.html  index.html  myapp_login.html  myapp_signup.html  upd_car.html
carshow/utils/: valdx.py
coding/: db.sqlite3
coding/coding/: asgi.py  settings.py  urls.py  wsgi.py
coding/jcf/: admin.py  apps.py  models.py  urls.py  views.py
coding/jcf/migrations/: 0001_initial.py
coding/templates/: about.html  base.html  contacts.html  index.html  special.html
numx/: Dfx.py  Numx.py
