[tool.poetry]
name = "simple-pytest-tutorial"
version = "0.1.0"
description = "simple pytest"
authors = ["devpy <deventiwari2029@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
requests = "^2.31.0"
pandas = "^2.1.0"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
